--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
-.terraform/**
-.terraform.lock.hcl
-.terraform.tfstate.lock.info
-*.backup
-*.swp
 **/.terraform/*
+
+# .tfstate files
 *.tfstate
 *.tfstate.*
+
+# Crash log files
+crash.log
+crash.*.log
+
+*.tfvars
+*.tfvars.json
